--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,6 @@
 		<h2>From here, you can look for any publication</h2>
 			<!--<a href=""  data-role="button" data-icon="arrow-r" data-iconpos="right">Scan a QRcode (on construction)</a>-->
 			<a href="#proceedings-search" data-role="button" data-icon="arrow-r" data-iconpos="right">Search in proceedings</a>
-		<h2>Search in events</h2>  
+		<h2>Browse conference tracks</h2>  
 	</section>
 </article>
