--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 <article id="home">	
 	<section class="content">
-		<h2>From here, you can look for any publication</h2>
-			<!--<a href=""  data-role="button" data-icon="arrow-r" data-iconpos="right">Scan a QRcode (on construction)</a>-->
-			<a href="#proceedings-search" data-role="button" data-icon="arrow-r" data-iconpos="right">Search in proceedings</a>
+		<h2>Search in conference proceedings</h2>
+		<a href="#proceedings-search/by-author"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Author</a>
+		<a href="#proceedings-search/by-keyword" data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Keyword</a>
+		<a href="#proceedings-search/by-title"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Title</a>
 		<h2>Browse conference tracks</h2>  
 	</section>
 </article>
