--- a/templates/navBar.html
+++ b/templates/navBar.html
@@ -1,8 +1,7 @@
-
 <nav data-role="navbar" class="ui-navbar ui-navbar-noicons" role="navigation" id="navBar">
 	<ul>
 		<li><a href="">Home</a></li>       
-		<li><a href="#proceedings-search" id="navSearchPoster">Search Publication</a></li>  
-		<li><a href="">Recommended publications (on construction)</a></li>
+		<li><a href="#">Home</a></li>       
+		<li><a href="#">Scan a QRcode (on construction)</a></li>  
 	</ul>
 </nav> 
