--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
 	<div data-role="navbar" class="ui-navbar ui-navbar-noicons" role="navigation" >
 		<ul class="ui-grid">
 			<li class="ui-block-a"><a href="http://liris.cnrs.fr/lionel.medini/wiki/doku.php?id=dataconf"><span>About the DataConf webapp</span></a></li>
-			<li class="ui-block-b"><a href="http://liris.cnrs.fr/lionel.medini/wiki/doku.php?id=dataconf#development_team"><span>Development Team</span></a></li>		
+			<li class="ui-block-b"><a href="http://iswc2012.semanticweb.org/"><span>ISWC'2012 official website</span></a></li>		
 		</ul>
 	</div>
 </footer>
