Major release : graphe navigation, localStorage implementation

--- a/templates/proceedingsSearch.html
+++ b/templates/proceedingsSearch.html
@@ -2,8 +2,10 @@
 <article id="proceedingsSearch"> 
 	<section class="content">
 		<h1 class="searchTrack"></h1>
-		<a href="#proceedings-search/by-author"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Author</a>
-		<a href="#proceedings-search/by-keyword" data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Keyword</a>
-		<a href="#proceedings-search/by-title"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Title</a>
+		<ul class="list gradWhite">   
+			<li><a href="#proceedings-search/by-author"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Author</a></li>
+			<li><a href="#proceedings-search/by-keyword" data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Keyword</a></li>
+			<li><a href="#proceedings-search/by-title"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Title</a></li>
+		</ul>
 	</section>
 </article>  
