--- a/templates/qrcScan.html
+++ b/templates/qrcScan.html
@@ -1,1 +1,19 @@
-//TODO
+
+<article id="qrcscan"> 
+	<section class="content">
+		<h1 class="qrcscan"></h1>
+		  <h3 id="message"></h3>
+	    <div id="cameraShoot" style="text-align: center">
+		    <div id="outdiv"  >
+          		   
+        </div> 
+        <canvas id="qr-canvas" style="display:none;" ></canvas> 
+			  <div id="command-btn">
+			  <a id="camBtn" href='javascript:setwebcam()' data-role="button" data-icon="arrow-r" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="c"> Get camera ! </a> 
+        </div> 
+	    </div>
+	</section>
+	
+</article>  
+ 
+
