--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
 <footer id="footer" data-role="footer" data-position="fixed" >
 	<div data-role="navbar" class="ui-navbar ui-navbar-noicons" role="navigation" >
 		<ul class="ui-grid">
-			<li class="ui-block-a"><a href="http://www2012.wwwconference.org/"><span>WWW'2012 website</span></a></li>
+			<li class="ui-block-a"><a href="<%= conference.website %>"><span><%= conference.name %> website</span></a></li>
 			<li class="ui-block-b"><a href="http://liris.cnrs.fr/lionel.medini/wiki/doku.php?id=dataconf"><span>DataConf app website</span></a></li>
 		</ul>
 	</div>
