--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 <article id="home">	
 	<section class="content">
 		<h2>Search in conference proceedings</h2>
-		<a href="#search/by-author//proceedings"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Author</a>
-		<a href="#search/by-keyword//proceedings" data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Keyword</a>
-		<a href="#search/by-title//proceedings"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Title</a>
+		<a href="#search/by-author/<%= conference.baseUri %>"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Author</a>
+		<a href="#search/by-keyword/<%= conference.baseUri %>" data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Keyword</a>
+		<a href="#search/by-title/<%= conference.baseUri %>"  data-role="button" data-icon="arrow-r" data-iconpos="right">Search By Title</a>
 	</section>
 </article>
